Bug 923431 - Fix the code that adjusts scroll offset while pinching; add tests to go with. r=botond